# HuaweiCodeCraft2024-Final

./: .clang-format  CMakeLists.txt  README.md
scripts/: format.sh  linux_replay.sh  linux_run.sh  run.py  run.sh  testllm.sh  zip.sh
src/: CMakeLists.txt  berth.cpp  berth.hpp  cargo.cpp  cargo.hpp  config.cpp  config.hpp  frame.cpp  frame.hpp  land_controller.cpp  land_controller.hpp  land_scheduler.cpp  land_scheduler.hpp  main.cpp  map.cpp  map.hpp  ocean_controller.cpp  ocean_controller.hpp  ocean_scheduler.cpp  ocean_scheduler.hpp  question.cpp  question.hpp  robot.cpp  robot.hpp  ship.cpp  ship.hpp  utils.cpp  utils.hpp
test/: question.cpp  test.cpp
